Developer1 Animation module version 1 relese

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     
     <h1>My First Html File</h1>
+    <p> Animation file 1 updated</p>
+    <p>Animation file 2 updated</p>
 </body>
 </html>
